--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,12 +13,10 @@
     <color name="brandNature">#00917C</color>
     <color name="brandBeige">#FDE8CD</color>
 
-    <color name="primaryColor">#433520</color>
-    <color name="primaryLightColor">#6f5f48</color>
-    <color name="primaryDarkColor">#1f0e00</color>
-    <color name="secondaryColor">#00917c</color>
-    <color name="secondaryLightColor">#4fc2ab</color>
-    <color name="secondaryDarkColor">#006250</color>
-    <color name="primaryTextColor">#ffffff</color>
-    <color name="secondaryTextColor">#000000</color>
+    <color name="brandBrownLight">#6f5f48</color>
+    <color name="brandBrownDark">#1f0e00</color>
+    <color name="brandNatureLight">#4fc2ab</color>
+    <color name="brandNatureDark">#006250</color>
+    <color name="primaryText">#ffffff</color>
+    <color name="secondaryText">#000000</color>
 </resources>
