--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,8 @@
     <dimen name="mini_padding">2dp</dimen>
     <dimen name="micro_padding">1dp</dimen>
 
-    <dimen name="rule_min_item_height">56dp</dimen>
-    <dimen name="rule_main_image_view_size">50dp</dimen>
+    <dimen name="rule_item_height">72dp</dimen>
+    <dimen name="rule_item_image_view_size">40dp</dimen>
+
+    <dimen name="rule_edit_text_weight">150dp</dimen>
 </resources>
